# classical-chinese-nlp

./: .gitignore  README.md
manjianghong/: README.md  README.zh.md  compute_metrics.py
manjianghong/数据/: 01_逐篇特征.csv  02_待考vs各篇_相似度.csv  03_待考vs各组质心.csv  04_语言模型困惑度.csv  05a_距离矩阵_二元组余弦.csv  05b_距离矩阵_单字JSD.csv  06_最近质心分类_LOO判别.csv  06b_LOO逐篇判别明细.csv  07_组内基线_vs_待考.csv  08_特征计数_地理敌称母题.csv  metrics_summary.json
manjianghong/语料/: 00_待考_满江红_怒发冲冠.txt  11_岳飞_词_满江红_登黄鹤楼有感.txt  12_岳飞_诗_题青泥市萧寺壁.txt  16_岳飞_诗_题翠岩寺.txt  17_岳飞_文_五岳祠盟记.txt  21_发现存疑_祝允哲_和岳元帅述怀.txt  30_对照_苏轼_满江红_江汉西来.txt  40_王越_诗集.txt
prosody/: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
prosody/data/: corrections.tsv  phonology.tsv
prosody/examples/: broken-demo.txt  chunwang-dufu.txt  denggao-dufu.txt  denglou-wangzhihuan.txt  manjianghong-yuefei.txt  rumengling-liqingzhao.txt
prosody/include/pingze/: checker.hpp  phonology.hpp  templates.hpp  unicode.hpp
prosody/src/: checker.cpp  main.cpp  phonology.cpp  templates.cpp  unicode.cpp
prosody/tests/: test_pingze.cpp
stylometry/: .gitignore  CMakeLists.txt  README.md
stylometry/cases/heshuangqing/: README.md
stylometry/cases/heshuangqing/corpus/: 00_heshuangqing.txt  10_gutaiqing.txt  11_wuzao.txt  20_nalanxingde.txt  21_xianghongzuo.txt  30_shizhenlin.txt  README.md
stylometry/cases/heshuangqing/out_advanced/: adv_1nn_loo.csv  adv_permutation.csv  adv_target_1nn_perdoc.csv  adv_target_nearest.csv
stylometry/cases/manjianghong/: README.md
stylometry/cases/manjianghong/corpus/: 10_岳飞_词_小重山.txt  13_岳飞_诗_池州翠微亭.txt  14_岳飞_诗_送紫岩张先生北伐.txt  15_岳飞_诗_寄浮图慧海.txt  18_岳飞_补遗_诗文.txt  20_发现存疑_满江红_与祝允哲述怀.txt
stylometry/cases/manjianghong/out_advanced/: adv_1nn_loo.csv  adv_permutation.csv  adv_target_1nn_perdoc.csv  adv_target_nearest.csv
stylometry/data/: function_words.txt
stylometry/include/stylo/: stylo.hpp
stylometry/ml/: README.md  ml_attribution.py
stylometry/src/: advanced.cpp  main.cpp  metrics.cpp  text.cpp
stylometry/tests/: test_stylo.cpp
